// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`deepFindAllByKey addBlastLinksToFreeText should handle no positions 1`] = `
[
  [
    "SOME TEXT",
  ],
]
`;

exports[`deepFindAllByKey addBlastLinksToFreeText should handle positions at the beggining 1`] = `
[
  [
    {
      "$$typeof": Symbol(react.transitional.element),
      "_owner": null,
      "_store": {},
      "key": "10-34",
      "props": {
        "children": "10-34",
        "to": "/blast?ids=UP_ACCESSION[10-34]",
      },
      "type": {
        "$$typeof": Symbol(react.forward_ref),
        "propTypes": {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      },
    },
    " SOME TEXT",
  ],
]
`;

exports[`deepFindAllByKey addBlastLinksToFreeText should handle positions at the end 1`] = `
[
  [
    "SOME TEXT ",
    {
      "$$typeof": Symbol(react.transitional.element),
      "_owner": null,
      "_store": {},
      "key": "10-34",
      "props": {
        "children": "10-34",
        "to": "/blast?ids=UP_ACCESSION[10-34]",
      },
      "type": {
        "$$typeof": Symbol(react.forward_ref),
        "propTypes": {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      },
    },
  ],
]
`;
